# pytex

./: LICENCE  pyproject.toml
src/pytex/latex/: table.py
