[build-systems]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pytex"
version = "0.0.1"
authors = [
	{ name="Steffen Peikert", email="steffen.peikert@gmail.com" },
]
description = "This package provides basic helpers to create latex files from python data."
requires-python = ">=3.7"

dependencies = [
	"numpy ~= 1.24.3",
]
